# focusforlife

./: README.md
android/: .gitignore  ARCHIVE_LOG.md  context.main.md  context.temp.md  settings.gradle.kts  temp.context.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: .gitignore  Cargo.toml
desktop/config/: blocked-domains.txt  brave-policy-windows.json  example.toml  focusforlife-blocklist.conf  unbound.conf  windows-config.toml
desktop/crates/daemon/: Cargo.toml
desktop/crates/daemon/src/: browser_history.rs  cdp_tracker.rs  enforcement.rs  firebase_sync.rs  ipc_server.rs  main.rs  rules.rs  storage.rs  tracker.rs
desktop/crates/shared/: Cargo.toml
desktop/crates/ui/: Cargo.toml
desktop/crates/watcher/: Cargo.toml
desktop/crates/windows-daemon/: Cargo.toml
desktop/crates/windows-daemon/src/: aw_tracker.rs  cdp_tracker.rs  enforcement.rs  firebase_sync.rs  main.rs  rules.rs  storage.rs  tracker.rs  ui_main.rs
desktop/docs/: blocklist-format.md  boot-install.md  config.md  dns-test-run.md  enforcement-steps.md  enforcement-unbound.md  enforcement.md  rule-engine.md  state-machine.md  systemd-install.md  systemd.md  ui-contract.md  windows-onboarding.md
desktop/scripts/: install_boot_services.sh
desktop/systemd/: ffl-daemon.service  ffl-firewall.service  ffl-guardian.service  ffl-guardian.timer  ffl-resolver.service  ffl-ui.service  ffl-watcher.service
docs/: GETTING_STARTED.md  firebase-setup.md
(+40 files in other folders)
