[package]
name = "ffl-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
ffl-shared = { path = "../shared" }
anyhow = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["chrono"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
