[package]
name = "ffl-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
ffl-shared = { path = "../shared" }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.31", features = ["chrono"] }
url = "2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
eframe = { version = "0.27", optional = true }
image = { version = "0.24", default-features = false, features = ["png"], optional = true }

[[bin]]
name = "ffl-windows-ui"
path = "src/ui_main.rs"
required-features = ["ui"]

[features]
ui = ["eframe", "image"]
